--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -2022,6 +2022,7 @@
     <string name="etp_pay_later_option_text">Pay later</string>
     <string name="etp_pay_later_charges_text">You will not be charged until your stay, unless a deposit is required.</string>
     <string name="etp_pay_later_currency_text_TEMPLATE">Pay the hotel directly, in the hotel\'s local currency (%s).</string>
+    <string name="etp_pay_later_payment_info_text">Payment information is only needed to hold your reservation.</string>
     <string name="etp_pay_later_cancellation_text">Cancellation is free, right up to the hotel\'s cancellation window.</string>
     <string name="etp_pay_now_option_text">Pay online now</string>
     <string name="etp_pay_now_charges_text">Expedia will process your payment details.</string>
