3392 change flight filters to spinner

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -147,15 +147,15 @@
     <!-- Default label for unnamed areas/neighborhoods -->
     <string name="Other_Areas">Other Areas</string>
     <!-- Short label for "sort by popular" button -->
-    <string name="popular">popular</string>
+    <string name="popular">Popular</string>
     <!-- Short label for "sort by price" button -->
-    <string name="price">price</string>
+    <string name="price">Price</string>
     <!-- Short label for "sort by rating" button -->
-    <string name="rating">rating</string>
+    <string name="rating">Rating</string>
     <!-- Short label for "sort by distance" button -->
-    <string name="distance">distance</string>
+    <string name="distance">Distance</string>
     <!-- Short label for "sort by discounts" button -->
-    <string name="discounts">discounts</string>
+    <string name="discounts">Discounts</string>
     <!-- Content description for "sort by popular" button -->
     <string name="cd_sort_by_popular">Press to sort by the most popular hotels.</string>
     <!-- Content description for "sort by price" button -->
