--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -12,6 +12,10 @@
     <string name="same_as_pick_up">Same as pick-up</string>
     <!-- Label for Car Search Screen header -->
     <string name="dates_and_location">Dates and Location</string>
+    <!-- Label for Cars date button -->
+    <string name="select_pickup_and_dropoff_dates">Select pick-up and drop-off dates</string>
+    <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
+    <string name="select_return_date_TEMPLATE">%1$s – Select return date</string>
 
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
