Set search times with SeekBars
- Add CarSearchParamsBuilder to manipulate CarSearchParams without mutating a
  CarSearchParams object
- Add ui tests to validate date and time strings

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -16,6 +16,10 @@
     <string name="select_pickup_and_dropoff_dates">Select pick-up and drop-off dates</string>
     <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
     <string name="select_return_date_TEMPLATE">%1$s – Select return date</string>
+    <!-- Label for pick-up time picker -->
+    <string name="pick_up_time_label">Pick-up</string>
+    <!-- Label for drop-up time picker -->
+    <string name="drop_off_time_label">Drop-off</string>
 
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
