Show progress indicator for cars.
Conflicts:
	project/src/main/java/com/expedia/bookings/widget/CarCategoryListWidget.java
	project/src/main/java/com/expedia/bookings/widget/CarSearchController.java
	project/src/main/java/com/expedia/bookings/widget/CarSearchParamsWidget.java
	project/src/main/res/layout/widget_car_search.xml

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="error_missing_start_date_param">Start Date missing</string>
     <!-- Error messge for missing End date date in search form -->
     <string name="error_missing_end_date_param">End Date missing</string>
+    <!-- Temporary String for general error message -->
+    <string name="error_car">There was some error. Check search params.</string>
 
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
