--- a/project/src/main/res/values-zh/strings.xml
+++ b/project/src/main/res/values-zh/strings.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Cars -->
+    <!-- Car search label for pick-up time -->
+    <string name="pick_up_time">取车时间</string>
+    <!-- Car search label for drop-off time-->
+    <string name="drop_off_time">还车时间</string>
+
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
     <string name="search_all_hint">输入您的目的地</string>
@@ -195,10 +201,20 @@
     <string name="all_airports">全部机场</string>
 
     <!-- Tablet hotel details -->
+    <!-- Rooms and rates pay later -->
+    <string name="room_rate_pay_later">到店付款</string>
+    <!-- Rooms and rates pay now -->
+    <string name="room_rate_pay_now">立即付款</string>
+    <!-- Rooms and rates pay later deposit due now -->
+    <string name="room_rate_pay_later_due_now">现在支付</string>
+    <!-- Rooms and rates pay later total -->
+    <string name="room_rate_pay_later_total_template">总额 %s</string>
     <!-- Rooms and rates price/night, i.e. $100/night -->
     <string name="room_rate_per_night_template">%s/晚</string>
-    <!-- Rooms and rates resort fees template. i.e. This hotel charges additional fees of $25 -->
-    <string name="tablet_room_rate_resort_fees_template">此次住宿的酒店费用：&lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <!-- Rooms and rates resort fees template when fees are included in price displayed i.e. This hotel charges additional fees of $25 -->
+    <string name="tablet_room_rate_resort_fees_included_template">此次住宿的酒店费用（已含）：&lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <!-- Rooms and rates resort fees template when fees are included in price displayed i.e. This hotel charges additional fees of $25 -->
+    <string name="tablet_room_rate_resort_fees_not_included_template">此次住宿的酒店费用（未含）：&lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
     <!-- Rooms and rates button to add selected room to trip -->
     <string name="room_rate_button_add_to_trip">加入旅行计划</string>
     <!-- Rooms and rates button to select a particular room and view details -->
@@ -238,6 +254,8 @@
     <string name="round_trip">往返</string>
     <!-- Label describing the total price of the flight or hotel that is going to be booked -->
     <string name="total_with_tax">总额</string>
+    <!-- Label describing the total price of the flight or hotel, when we're including mandatory taxes & fees -->
+    <string name="trip_total">旅行总额</string>
 
     <!-- Tablet hotel trip bucket -->
     <!-- Progress dialog text while creating a trip -->
@@ -278,6 +296,12 @@
     <string name="link_accounts">关联帐户</string>
     <!-- Failure to update the user -->
     <string name="failure_to_update_user">未能获取更新的用户信息。</string>
+    <!-- User Denied email permission try again button text -->
+    <string name="authorize_email_facebook_button">授予电子邮件权限</string>
+    <!-- User Denied email permission Heading -->
+    <string name="user_denied_permission_email_heading">电子邮件权限</string>
+    <!-- User Denied email permission re-request message -->
+    <string name="user_denied_permission_email_message">如要使用 Facebook 登录，我们需要相关权限来验证您的电子邮件地址。\n\n请按下面的 Facebook 按钮来授予 Expedia 权限，以便我们可以验证您的电子邮件地址。谢谢！</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">正在关联您的帐户…</string>
     <!-- Log In -->
@@ -328,6 +352,8 @@
     <string name="explore_now">马上探索</string>
     <!-- Label for Collection tile that, when clicked, takes you to search results with your last state -->
     <string name="your_search">您的搜索</string>
+    <!-- Label for Current Location Collection tile that, when clicked, takes you to hotel search results with current location  -->
+    <string name="current_location_tile">今晚的附近优惠</string>
     <!-- Subtitle for "Your Search" collection tile, indicating number of items in TripBucket -->
     <plurals name="num_items_TEMPLATE">
         <item quantity="zero">%s 项</item>
@@ -590,13 +616,16 @@
     <!-- Menu label: Hide this itin button for this trip -->
     <string name="itin_button_hide">隐藏</string>
     <!-- Menu label: Never show this type of itin button again -->
-    <string name="itin_button_hide_forever">永远隐藏</string>
+    <string name="itin_button_hide_forever">隐藏全部</string>
 
     <!-- Hotel attach -->
     <!-- Button label to search for a hotel in the flight destination city. %1$s is the city, e.g. "Washington, DC" -->
     <string name="add_hotel_TEMPLATE">添加%1$s酒店</string>
     <!-- Button label to search for a hotel in the flight destination city. Used only when we don't know the destination city. -->
     <string name="add_hotel_fallback">添加您的目的地的酒店</string>
+    <!-- Button label to add a hotel in the air attach case. -->
+    <string name="add_hotel_air_attach">添加酒店</string>
+
 
     <!-- Itin Local Expert.  Do not translate the "Local Expert" part because it is the title of a product. -->
     <string name="talk_to_local_expert">与本地服务专家通话</string>
@@ -1196,12 +1225,16 @@
     <string name="best_price_guarantee">最优价格保证</string>
     <!-- Free cancellation template string where we insert the date the free cancellation expires -->
     <string name="free_cancellation_date_TEMPLATE">&lt;b&gt;%s&lt;/b&gt;前&lt;b&gt;免费取消预订&lt;/b&gt;</string>
+    <!-- Resort fees -->
+    <string name="resort_fee">度假设施费:</string>
+    <!-- Pay now or later -->
+    <string name="pay_later">今天要付给 Expedia 的金额：</string>
     <!-- Log out -->
     <string name="log_out">退出</string>
     <!-- You'll earn points for this trip -->
-    <string name="youll_earn_points_TEMPLATE">此次旅行将累积 %1$s 分！</string>
+    <string name="youll_earn_points_TEMPLATE">此次预订将累积 %1$s 分！</string>
     <!-- Blurb text displayed on account login button when already logged in -->
-    <string name="x_points_for_this_trip_TEMPLATE">此次旅行积 &lt;b&gt;%1$s&lt;/b&gt; 分！</string>
+    <string name="x_points_for_this_trip_TEMPLATE">此次旅行将累积 %1$s 分！</string>
     <!-- You'll earn bonus points for this booking -->
     <string name="youll_earn_bonus_points_for_this_booking">此次预订可以累积奖励积分！</string>
     <!-- Label to show while we are checking for price changes on the checkout receipt -->
@@ -1218,6 +1251,12 @@
     <string name="please_use_the_roman_alphabet">请使用拉丁字母</string>
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">请输入有效的电子邮件地址。</string>
+    <!-- Row header for when we show resort fees as its own line item -->
+    <string name="fees_paid_at_hotel">需在酒店支付的费用：</string>
+    <!-- Row header for when the grand total of the user's hotel stay is more than what they owe Expedia at the time of reservation-->
+    <string name="total_due_to_expedia_today">今天要付给 Expedia 的总额：</string>
+    <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
+    <string name="resort_fee_disclaimer_TEMPLATE">度假费用 &lt;b&gt;%1$s&lt;/b&gt; 将在酒店收取。您的住宿总额为 &lt;b&gt;%2$s&lt;/b&gt;。</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -1258,6 +1297,18 @@
     <string name="enter_traveler_info">旅客信息</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">主要旅客的信息</string>
+    <!-- Saved button for traveler/payment -->
+    <string name="saved_button">已保存</string>
+    <!-- Edit button for traveler/payment -->
+    <string name="edit_button">编辑</string>
+    <!-- Select traveler/contact from checkout saved travelers list -->
+    <string name="select_traveler">选择联系人</string>
+    <!-- Add new traveler, checkout saved travelers list -->
+    <string name="add_new_traveler">添加新旅客</string>
+    <!-- Select card from checkout saved credit cards list -->
+    <string name="saved_creditcards">保存的卡</string>
+    <!-- Add new card, checkout saved credit cards list -->
+    <string name="add_new_creditcard">添加新卡</string>
     <!-- Add Guest for hotels -->
     <string name="guest_details">住客详细信息</string>
     <!-- Add adult traveler number template -->
@@ -1478,6 +1529,22 @@
     <string name="add_insurance">添加保险</string>
     <!-- Insurance -->
     <string name="insurance">保险</string>
+    <!-- Air attach messaging -->
+    <string name="air_attach_alert">由于您预订了这个航班，</string>
+    <!-- Air attach savings messaging -->
+    <string name="air_attach_potential_savings">酒店订房最高可享受 45 折。</string>
+    <!-- Air attach discounted hotel messaging -->
+    <string name="air_attach_amount_discounted_TEMPLATE">如果现在订酒店，可以节省 %s！</string>
+    <!-- Air attach offer expiration alert -->
+    <string name="air_attach_expires">优惠期限：</string>
+    <!-- Air attach offer expiration date -->
+    <string name="air_attach_expiration_date_TEMPLATE">%d 天</string>
+    <!-- Air attach add hotel button -->
+    <string name="air_attach_add_hotel">添加酒店</string>
+    <!-- Air attach add hotel button subtitle -->
+    <string name="air_attach_with_discounts">惊喜折扣</string>
+
+
 
     <!-- Hotel confirmation page -->
     <!-- Title for section helping users get flights after booking a hotel -->
@@ -1702,6 +1769,8 @@
     <string name="mobile_exclusive">移动用户专享</string>
     <!-- Expedia Deal for a given property, tonight only -->
     <string name="tonight_only">只限今晚！</string>
+    <!-- Expedia sponsored listing -->
+    <string name="sponsored">赞助商</string>
     <!-- Search range error message template. %1$s = max search length. e.g. "We're sorry, but we are unable to search for hotel stays longer than 28 days." -->
     <string name="hotel_search_range_error_TEMPLATE">很抱歉，我们无法搜索超过 %1$s 天的酒店预订。</string>
     <!-- Search Error title text "Search Error" -->
@@ -1718,7 +1787,7 @@
     </plurals>
 
     <!-- Dialog message asking user if they want to enable a location provider. -->
-    <string name="EnableLocationSettings">若要使用“我的位置”，您必须先在“设置”中开启“位置”服务来源。\n现在就转到“设置”，开启服务？</string>
+    <string name="EnableLocationSettings">若要使用“当前位置”，您必须先在“设置”中开启“位置”服务来源。\n\n现在就转到“设置”，开启服务？</string>
     <!-- Message displayed when user has disabled finding the device's location. -->
     <string name="ProviderDisabled">您的位置服务提供商已被禁用。请重新启用，以按所在位置进行搜索。</string>
 
@@ -1947,6 +2016,20 @@
     <!-- User reviews server/parsing error -->
     <string name="user_review_unavailable">暂时无法提供点评</string>
 
+    <!-- ETP pay later info message -->
+    <string name="pay_later_info_text">现在预订，到店付款</string>
+    <string name="etp_payment_options_text">您的酒店付款选项</string>
+    <string name="etp_pay_later_option_text">到店付款</string>
+    <string name="etp_pay_later_charges_text">直至入住之前您都无需付款，除非酒店要求您支付一定押金。</string>
+    <string name="etp_pay_later_currency_text_TEMPLATE">到店后直接以酒店当地货币 %s 付款。</string>
+    <string name="etp_pay_later_payment_info_text">所需的付款信息只是用来保留您的预订。</string>
+    <string name="etp_pay_later_cancellation_text">在酒店的取消截止日期之前都可以免费取消。</string>
+    <string name="etp_pay_now_option_text">立即在线付款</string>
+    <string name="etp_pay_now_charges_text">Expedia 将处理您的付款信息。</string>
+    <string name="etp_pay_now_currency_text_TEMPLATE">您将以您的当地货币 %s 付款。</string>
+    <string name="etp_pay_now_cancellation_text">在酒店的取消截止日期之前都可以免费取消。</string>
+    <string name="etp_select_room">选择房间</string>
+
     <!-- Room and rates list -->
     <!-- The number of nights the customer is staying at a hotel.  %d is the number of nights (e.g., "Staying 3 nights") -->
     <plurals name="staying_nights">
@@ -1992,6 +2075,13 @@
     <string name="free_cancellation">免费取消预订</string>
     <!-- This fee is not included in the total -->
     <string name="fee_not_included_in_total">总价中不含这些费用</string>
+    <!-- Top line of resort fee text -->
+    <string name="hotel_fees_for_this_stay">此次住宿的酒店费用</string>
+    <!-- Included in the price -->
+    <string name="included_in_the_price">已含在房价内</string>
+    <!-- Not included in the price -->
+    <string name="not_included_in_the_price">未包含在价格内</string>
+
     <!-- Renovation Notice -->
     <string name="renovation_notice">装修通知</string>
     <!-- This property is undergoing renovations -->
@@ -2083,7 +2173,7 @@
     <!-- Label for account status -->
     <string name="enrolled_in_expedia_rewards">已加入 Expedia+ Rewards\u2122计划</string>
     <!-- Label for Expedia +blue rewards program name -->
-    <string name="Expedia_plus_blue">Expedia +蓝色</string>
+    <string name="Expedia_plus_blue">Expedia+ 蓝标</string>
     <!-- Label for Expedia +silver rewards program name -->
     <string name="Expedia_plus_silver">Expedia +银牌</string>
     <!-- Label for Expedia +gold rewards program name -->
@@ -2183,7 +2273,7 @@
     <!-- Label for link to privacy policy -->
     <string name="info_label_privacy_policy">隐私政策</string>
     <!-- Copyright information -->
-    <string name="copyright">© 版权所有 2012–2015 Expedia, Inc.\n 保留所有权利。</string>
+    <string name="copyright_TEMPLATE">© 版权所有 2012–%1$s Expedia, Inc.\n保留所有权利。</string>
     <!-- Dialog Title telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_title_logged_out_and_cleared_private_data">已退出帐户并清除数据</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
@@ -2603,13 +2693,13 @@
     <!-- Error if you've exceeded your overall Google Wallet spending limit -->
     <string name="spending_limit_exceeded">您已超出谷歌钱包的消费限额</string>
     <!-- Content description for "buy with wallet" button -->
-    <string name="wallet_buy_with_google_wallet">通过谷歌钱包购买</string>
+    <string name="wallet_buy_with_google_wallet">使用谷歌钱包付款</string>
     <!-- Message for Google wallet coupon promotion -->
-    <string name="wallet_promo_offer">使用谷歌钱包，额外再省 <b>10%</b>！</string>
+    <string name="wallet_promo_offer">使用谷歌钱包，预订金额超 <b>$200</b> 即省 <b>$50</b>！</string>
     <!-- Message informing users that they are saving money with the Google Wallet promo -->
-    <string name="wallet_promo_in_use_message">使用谷歌钱包为您省了 10%！</string>
+    <string name="wallet_promo_in_use_message">使用谷歌钱包为您省了 $50！</string>
     <!-- Message shown in dialog when users already had a coupon, but then tried to add the Google Wallet promotional coupon -->
-    <string name="coupon_replaced_message">每次预订只能使用一张优惠券。我们已经用您使用谷歌钱包获得的 9 折优惠券替换了之前的优惠券。</string>
+    <string name="coupon_replaced_message">每次预订只能使用一张优惠券。我们已经用谷歌钱包赠送的 $50 优惠券替换了之前的优惠券。</string>
     <!-- Message shown while loading Wallet coupon -->
     <string name="wallet_promo_applying">正在计算谷歌钱包折扣…</string>
     <!-- Error message shown in dialog when we could not (for some reason) add the Google Wallet promo discount -->
@@ -2617,17 +2707,9 @@
     <!-- Title for Google Wallet promo terms & conditions -->
     <string name="wallet_promo_tc_title">谷歌钱包使用条款和条件</string>
     <!-- Terms & conditions for Google Wallet promo -->
-    <string name="wallet_promo_tc_message">必须在 Expedia Android 应用中兑换优惠券，旅行日期限制为 2013 年 6 月 17 日至 2013 年 12 月 31 日。此项促销由 Expedia.com 提供，只面向 Expedia.com 美国客户。\n\n预订成功与否取决于 Expedia 价格酒店在当时的空房情况，以及所有适用的条款和条件。此优惠券不能与其他优惠券、促销或特惠活动一起使用。此优惠券不能用于支付税款、供应商收取的费用、取消或变更罚款、管理费或其他杂费；所有这些都由客户个人承担。若您变更或取消部分预订，则优惠券不适用于变更后的旅行计划。\n\n此优惠券的使用条款和条件已形成书面条文，任何未经授权的人员均无权更改，包括 Expedia, Inc. 的员工。此优惠券不得转让，或兑换现金。如有法律禁止，则视为无效。Expedia, Inc. 可能随时撤销或更改此项优惠。</string>
-    <!-- Error message shown when user tries to apply promo to trips in 2014 and beyond -->
-    <string name="wallet_promo_expired">很抱歉，谷歌钱包折扣仅适用于 2013 年的行程计划。</string>
-
-    <!-- Samsung Wallet -->
-    <!-- Label to use when the ticket already exists in the wallet -->
-    <string name="view_in_samsung_wallet">在三星钱包中查看</string>
-    <!-- Label to use when the ticket does not already exist in the wallet and we want the user to add it -->
-    <string name="load_to_samsung_wallet">加载到三星钱包</string>
-    <!-- Label to use when the user does not have the Samsung Wallet app installed -->
-    <string name="download_samsung_wallet">下载 Samsung Wallet</string>
+    <string name="wallet_promo_tc_message">优惠：预订酒店，即赠 $50 优惠券，即刻生效！订单价格至少要达到 $200，方可享受优惠。使用方法：选择符合条件的酒店。在付款页面上，选择“使用谷歌钱包付款”。优惠券必须在 Expedia Android 移动 App 中兑换，有效期截至 2014 年 12 月 31 日 11:59 PM（太平洋时间），住宿期限自即日起至 2015 年 3 月 31 日。限时优惠：如有变动，恕不另行通知。每个帐户每次预订符合条件的酒店，只能使用一 (1) 张优惠券。此项促销由 Expedia.com 提供，只面向 Expedia.com 美国 Android 移动应用客户。Expedia 旅行社联盟计划的客户不可享受此项优惠。优惠券只能用于预订符合条件的 Expedia 特惠价酒店。预订视供应情况而定，并且须遵守所有相关条款额条件。此优惠券不能与其他优惠券、促销或特惠活动一起使用。此优惠券不能用于支付税款、供应商收取的费用、取消或变更罚款、管理费或其他杂费；所有这些都由客户个人承担。符合条件的预订一经完成，优惠券则完全使用，不可再重复使用。若您变更或取消部分预订，则优惠券不适用于变更后的旅行计划。此优惠券的使用条款和条件已形成书面条文，任何未经授权的人员均无权更改，包括 Expedia, Inc. 的员工。此优惠券不得转让，或兑换现金。Expedia, Inc. 可能随时撤销或更改此项优惠。如有法律禁止，则视为无效。</string>
+    <!-- Message shown when user tries to manually enter Google Wallet promo coupon -->
+    <string name="wallet_coupon_not_applied_manually">只有选择谷歌钱包付款时，方可使用此优惠券。</string>
 
     <!-- Human readable credit card names -->
     <!-- American Express -->
@@ -2970,13 +3052,18 @@
     <!-- Content description for Flight Search Results -->
     <string name="cd_tablet_results_flight_list">航班搜索结果</string>
 
+    <!-- Content description for action: Press to filter for the nearest hotels within a small radius from your search location -->
+    <string name="cd_pay_now">按此按钮选择立即付款</string>
+    <!-- Content description for action: Press to filter for hotels within a mid-distance radius from your search location -->
+    <string name="cd_pay_later">按此按钮选择到店付款</string>
+
     <!-- Tablet Confirmation Screen -->
     <!-- Header text to indicating booking confirmed for hotel -->
     <string name="tablet_confirmation_hotel_booked">酒店预订完成</string>
     <!-- Header text to indicating booking confirmed for flight -->
     <string name="tablet_confirmation_flight_booked">机票预订完成！</string>
     <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date-->
-    <string name="tablet_confirmation_summary">%1$s, %2$s</string>
+    <string name="tablet_confirmation_summary">%1$s\n%2$s</string>
     <!-- Itinerary summary text %1$s is ItineraryNumber, %2$s is user email -->
     <string name="tablet_itinerary_confirmation_TEMPLATE">行程单 %1$s 已发送到%2$s</string>
     <!-- Share button text for hotels -->
@@ -3017,15 +3104,10 @@
     <string name="tablet_mismatched_products_message">您选择的酒店和航班日期不相同。是否需要删除当前选择的酒店，并搜索与航班日期相符的酒店？</string>
     <!-- Dialog positive button message -->
     <string name="yes">是</string>
+    <!-- Dialog negative button message -->
+    <string name="no">否</string>
 
-    <!-- Travelocity App download link -->
-    <string name="share_template_long_ad_tvly">预订酒店、机票，查看并分享您的行程。马上下载免费的 Travelocity 移动应用。\n%s</string>
-    <string name="fees_paid_at_hotel">需要在酒店付款的费用：</string>
-    <string name="total_due_to_expedia_today">今天要付给 Expedia 的总金额：</string>
-    <string name="hotel_fees_for_this_stay">此次住宿的酒店费用</string>
-    <string name="included_in_the_price">已含在房价内</string>
-    <string name="not_included_in_the_price">未包含在房价内</string>
-    <string name="tablet_room_rate_resort_fees_included_template">此次住宿点酒店费用（已含）：&lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
-    <string name="tablet_room_rate_resort_fees_not_included_template">此次住宿点酒店费用（未含）：&lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <!-- Mail intent chooser dialog title -->
+    <string name="mailto_title">发送电子邮件…</string>
 
 </resources>
